--- a/views/visit.erb
+++ b/views/visit.erb
@@ -37,9 +37,11 @@ $(function() {
 
   <div class="form-group">
     <label>Ваш парикмахер:</label>
-    <select name="client[barber]" class="form-control">
+    <select name="client[barber]" class="form-control" value="<%=@c.barber%>">
+      <% @barbers.each do |barber| %>
+        <option><%=barber.name %></option>
 
-
+      <% end %>
     </select>
   </div>
 
